// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModifiersList /> should pass custom props to correct blocks 1`] = `
<div
  className="wrapper-test-class"
  id={4}
>
  <div
    className="sizes-table-wrapper"
  >
    <ForwardRef(Link)
      className="sizes-table-link"
      href="test.ru/123"
    >
      Таблица размеров
      <ForwardRef(StatementSVG)
        className="sizes-table-icon"
        role="presentation"
      />
    </ForwardRef(Link)>
  </div>
  <div
    className="items-container-test-class"
  >
    <ModifierItem
      key="0"
      name="testModifier - 1"
      onClick={[Function]}
      price={123}
      type="text"
    />
    <ModifierItem
      key="1"
      name="testModifier - 2"
      onClick={[Function]}
      price={233}
      type="text"
    />
  </div>
</div>
`;

exports[`<ModifiersList /> should render correct with sizesTableUrl 1`] = `
<ModifiersList
  sizesTableUrl="test.ru/123"
>
  <div>
    <div
      className="sizes-table-wrapper"
    >
      <ForwardRef(Link)
        className="sizes-table-link"
        href="test.ru/123"
      >
        <a
          className="link sizes-table-link basic-blue"
          data-testid="anchor"
          href="test.ru/123"
        >
          Таблица размеров
          <ForwardRef(StatementSVG)
            className="sizes-table-icon"
            role="presentation"
          >
            <svg
              className="sizes-table-icon"
              height={24}
              role="presentation"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M3 5a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v14a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V5Zm3-1a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1H6Z"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M7 16a1 1 0 0 1 1-1h5a1 1 0 1 1 0 2H8a1 1 0 0 1-1-1ZM7 12a1 1 0 0 1 1-1h7a1 1 0 1 1 0 2H8a1 1 0 0 1-1-1ZM7 8a1 1 0 0 1 1-1h7a1 1 0 1 1 0 2H8a1 1 0 0 1-1-1Z"
                fillRule="evenodd"
              />
            </svg>
          </ForwardRef(StatementSVG)>
        </a>
      </ForwardRef(Link)>
    </div>
  </div>
</ModifiersList>
`;

exports[`<ModifiersList /> should renders correctly with correct props 1`] = `
<div>
  <div>
    <ModifierItem
      currencyGrapheme="$"
      key="0"
      name="testModifier - 1"
      onClick={[Function]}
      price={123}
      type="text"
    />
    <ModifierItem
      currencyGrapheme="$"
      key="1"
      name="testModifier - 2"
      onClick={[Function]}
      price={233}
      type="text"
    />
  </div>
</div>
`;

exports[`<ModifiersList /> should renders correctly without props 1`] = `<div />`;
